# RAG-API

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.json  docker-compose.yaml
.github/workflows/: ci.yml
resources/migrations/20240424111111_create_posts/: up.sql
resources/schemas/: conversations_schema.json
resources/scripts/: modelcheck.sh
src/: config.rs  main.rs
src/api/: FileUpload.rs  conversation.rs  import.rs
src/db/: mod.rs  models.rs  postgres.rs  schema.rs
src/inference/: engine.rs  llm.rs  mod.rs  models.rs  noop.rs  ollama.rs
