[package]
name = "rustformers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] } 
config = "0.14.0"
llm = "0.1.1"
rand = "0.8.5"
serde = "1.0.198"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
tower-http = { version = "0.5.2", features = ["limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
