[package]
name = "rag-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] } 
uuid = { version = "1.9.1", features = ["v4", "serde"] }
diesel = { version = "2.2.1", features = ["postgres", "r2d2", "serde_json", "uuid"] }
diesel_migrations = "2.2.0"
llm = "0.1.1"
llm-base = "0.1.1"
rand = "0.8.5"
serde = "1.0.198"
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
tower-http = { version = "0.5.2", features = ["limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.61"
futures = "0.3.30"
more-config = { version = "2.1.4", features = ["async", "all"] }
